@@ -42,3 +42,4 @@ IF(NOT HAVE_LIBPNG)
 ENDIF(NOT HAVE_LIBPNG)
 
 ADD_SUBDIRECTORY(conformance)
+ADD_SUBDIRECTORY(nonregression)
